apps/web/kustom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          tty: true
          image: w3yz-prerelease
          command:
            - /bin/sh
            - -c
            - |
              bun install;
              task web:dev;
          ports:
            - containerPort: 3000
              name: web
