apps/web/kustom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
  labels:
    app: storefront
spec:
  type: ClusterIP
  selector:
    app: storefront
  ports:
    - port: 3000
