apps/web/kustom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-ingress
spec:
  tls:
    - hosts:
        - STOREFRONT_FQDN
      secretName: storefront-tls
  rules:
    - host: STOREFRONT_FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: storefront
                port:
                  number: 3000
